[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "iv-surface"
version = "0.1.0"
description = "Black-Scholes implied-volatility solving and simple IV surface interpolation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "requests",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["iv_surface*"]
